fixed clipping on WH
changed display of WorkHistory container to flex to avoid clipping at end of container

--- a/src/app/profile/workhistory/WorkHistory.module.css
+++ b/src/app/profile/workhistory/WorkHistory.module.css
@@ -1,5 +1,7 @@
 .container{
+    display: flex;
     position:relative;
+    flex-direction: column;
     padding:0rem;
     height: 100%;
     overflow:hidden;
